--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,16 +2,19 @@
 androidx-lifecycle = "2.9.1"
 composeHotReload = "1.0.0-beta01"
 composeMultiplatform = "1.8.2"
+hiltNavigationCompose = "1.2.0"
 junit = "4.13.2"
 kotlin = "2.2.0"
 kotlinx-coroutines = "1.10.2"
 ktor = "3.2.0"
+lifecycleViewmodelKtx = "2.9.1"
 logback = "1.5.18"
 kotlinSerialization = "2.2.0"
 kotlinxSerialization = "1.9.0"
 agp = "8.11.0-alpha10"
 okhttp = "4.12.0"
 retrofit = "3.0.0"
+retrofit2KotlinxSerializationConverter = "1.0.0"
 runner = "1.0.2"
 espressoCore = "3.0.2"
 appcompatV7 = "28.0.0"
@@ -21,7 +24,11 @@ espressoCoreVersion = "3.6.1"
 lifecycleRuntimeKtx = "2.9.1"
 activityCompose = "1.10.1"
 composeBom = "2025.06.01"
+kspVersion = "2.2.0-2.0.2"
+androidHilt = "2.56.2"
 [libraries]
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -35,6 +42,7 @@ logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 kotlin-serialization = {module = "org.jetbrains.kotlinx:kotlinx-serialization-json",version.ref = "kotlinxSerialization"}
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit2-kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofit2KotlinxSerializationConverter" }
 runner = { group = "com.android.support.test", name = "runner", version.ref = "runner" }
 espresso-core = { group = "com.android.support.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat-v7 = { group = "com.android.support", name = "appcompat-v7", version.ref = "appcompatV7" }
@@ -51,6 +59,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+android-hilt = {group = "com.google.dagger",name = "hilt-android",version.ref = "androidHilt"}
+android-hilt-compiler = {group = "com.google.dagger",name = "hilt-android-compiler",version.ref = "androidHilt"}
+
 [plugins]
 composeHotReload = { id = "org.jetbrains.compose.hot-reload", version.ref = "composeHotReload" }
 composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "composeMultiplatform" }
@@ -61,3 +72,5 @@ kotlinSerialization = {id = "org.jetbrains.kotlin.plugin.serialization",version.
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 androidApplication = { id = "com.android.application", version.ref = "agp" }
+ksp = {id = "com.google.devtools.ksp",version.ref="kspVersion"}
+androidHilt = {id = "com.google.dagger.hilt.android",version.ref="androidHilt"}
