--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,13 +6,13 @@ hiltNavigationCompose = "1.2.0"
 junit = "4.13.2"
 kotlin = "2.2.0"
 kotlinx-coroutines = "1.10.2"
-ktor = "3.2.0"
+ktor = "3.2.1"
 lifecycleViewmodelKtx = "2.9.1"
 logback = "1.5.18"
 kotlinSerialization = "2.2.0"
 kotlinxSerialization = "1.9.0"
 agp = "8.11.0-alpha10"
-okhttp = "4.12.0"
+okhttp = "5.1.0"
 retrofit = "3.0.0"
 retrofit2KotlinxSerializationConverter = "1.0.0"
 runner = "1.0.2"
@@ -26,6 +26,7 @@ activityCompose = "1.10.1"
 composeBom = "2025.06.01"
 kspVersion = "2.2.0-2.0.2"
 androidHilt = "2.56.2"
+uiTooling = "1.8.3"
 [libraries]
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
@@ -38,6 +39,7 @@ kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-s
 ktor-serverCore = { module = "io.ktor:ktor-server-core-jvm", version.ref = "ktor" }
 ktor-serverNetty = { module = "io.ktor:ktor-server-netty-jvm", version.ref = "ktor" }
 ktor-serverTestHost = { module = "io.ktor:ktor-server-test-host-jvm", version.ref = "ktor" }
+ktor-certificates = { module = "io.ktor:ktor-network-tls-certificates", version.ref = "ktor" }
 logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 kotlin-serialization = {module = "org.jetbrains.kotlinx:kotlinx-serialization-json",version.ref = "kotlinxSerialization"}
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
@@ -61,7 +63,7 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 android-hilt = {group = "com.google.dagger",name = "hilt-android",version.ref = "androidHilt"}
 android-hilt-compiler = {group = "com.google.dagger",name = "hilt-android-compiler",version.ref = "androidHilt"}
-
+ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
 [plugins]
 composeHotReload = { id = "org.jetbrains.compose.hot-reload", version.ref = "composeHotReload" }
 composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "composeMultiplatform" }
