--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 androidx-lifecycle = "2.9.1"
-composeHotReload = "1.0.0-beta01"
+composeHotReload = "1.0.0-beta03"
 composeMultiplatform = "1.8.2"
 hiltNavigationCompose = "1.2.0"
 junit = "4.13.2"
@@ -27,6 +27,8 @@ composeBom = "2025.06.01"
 kspVersion = "2.2.0-2.0.2"
 androidHilt = "2.56.2"
 uiTooling = "1.8.3"
+nav3Core = "1.0.0-alpha05"
+lifecycleViewmodelNav3 = "1.0.0-alpha03"
 [libraries]
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
@@ -64,6 +66,9 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 android-hilt = {group = "com.google.dagger",name = "hilt-android",version.ref = "androidHilt"}
 android-hilt-compiler = {group = "com.google.dagger",name = "hilt-android-compiler",version.ref = "androidHilt"}
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
+androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "nav3Core" }
+androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "nav3Core" }
+androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "lifecycleViewmodelNav3" }
 [plugins]
 composeHotReload = { id = "org.jetbrains.compose.hot-reload", version.ref = "composeHotReload" }
 composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "composeMultiplatform" }
